even though it's annotated, users don't see .Cm, so note we're talking about the target since 'package' is used all over the place.

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.612 2023/09/06 22:28:50 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.613 2023/09/07 15:12:38 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 6 2023 $
+.Dd $Mdocdate: September 7 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -2541,9 +2541,9 @@ User settings.
 Location for built packages.
 Defaults to
 .Pa ${PORTSDIR}/packages .
-See
+See the
 .Cm package
-for details.
+target for details.
 .It Ev PARALLEL_MAKE_FLAGS
 Used when
 .Ev DPB_PROPERTIES
