We prefer SITES.sufx (lowercase)

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.617 2023/09/07 17:17:43 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.618 2023/09/07 17:21:10 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -3240,7 +3240,7 @@ See
 for details.
 Suffix should start with
 .Sq \&.
-for consistency.
+and be all lowercase for consistency.
 .It Ev SITES0 , ... , SITES9
 Supplementary locations from which distribution files and patchfiles are
 retrieved (deprecated).
