--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.622 2023/09/08 21:57:09 lraab Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.623 2023/09/09 00:10:20 bentley Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 8 2023 $
+.Dd $Mdocdate: September 9 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -3632,7 +3632,9 @@ to apply to only a specific architecture.
 .It Ev USE_NOEXECONLY
 If set to
 .Sq Yes ,
-writes a wrapper script to ${WRKDIR}/bin/ld in
+writes a wrapper script to
+.Pa ${WRKDIR}/bin/ld
+in
 .Cm patch
 adding
 .Fl -no-execute-only .
@@ -3641,7 +3643,9 @@ which are used by default by the linker on some architectures.
 .It Ev USE_WXNEEDED
 If set to
 .Sq Yes ,
-writes a wrapper script to ${WRKDIR}/bin/ld in
+writes a wrapper script to
+.Pa ${WRKDIR}/bin/ld
+in
 .Cm patch
 to request that the linker adds an
 .Dv PT_OPENBSD_WXNEEDED
@@ -4552,8 +4556,10 @@ specifications.
 All file sets of the base OS, including xenocara, must be installed
 before building ports.
 .It "Fatal: /usr/local/lib/X11/app-defaults should exist and be a symlink"
-/usr/local/lib/X11/app-defaults is distributed as a symlink in the
-xshare*.tgz file set.
+.Pa /usr/local/lib/X11/app-defaults
+is distributed as a symlink in the
+.Pa xshare*.tgz
+file set.
 If xenocara was not fully installed before packages were added, it may
 have been created as a directory instead.
 .It "Fatal: the licensing info for <pkgname> is incomplete..."
