--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.625 2023/09/09 10:56:22 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.626 2023/09/09 14:15:42 bentley Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -3613,7 +3613,7 @@ writes a wrapper script to
 .Pa ${WRKDIR}/bin/ld
 in
 .Cm patch
-to request that the linker adds an
+to request that the linker adds a
 .Dv PT_OPENBSD_NOBTCFI
 ELF section.
 Use when a port does not work with the default strict enforcement of
@@ -3640,7 +3640,7 @@ writes a wrapper script to
 .Pa ${WRKDIR}/bin/ld
 in
 .Cm patch
-to request that the linker adds an
+to request that the linker adds a
 .Dv PT_OPENBSD_WXNEEDED
 ELF section.
 Use when a port requires memory mappings that are both executable
