--- a/lib/libcrypto/man/EVP_PKEY_keygen.3
+++ b/lib/libcrypto/man/EVP_PKEY_keygen.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: EVP_PKEY_keygen.3,v 1.12 2023/09/09 14:31:38 schwarze Exp $
+.\" $OpenBSD: EVP_PKEY_keygen.3,v 1.13 2023/09/10 04:05:26 jsg Exp $
 .\" full merge up to: OpenSSL 24a535ea Sep 22 13:14:20 2020 +0100
 .\"
 .\" This file is a derived work.
@@ -66,7 +66,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 9 2023 $
+.Dd $Mdocdate: September 10 2023 $
 .Dt EVP_PKEY_KEYGEN 3
 .Os
 .Sh NAME
@@ -252,7 +252,7 @@ returns a function pointer to the currently installed callback function or
 if no callback function is installed.
 .Pp
 .Fn EVP_PKEY_CTX_get_keygen_info
-retuns the number of available parameters if
+returns the number of available parameters if
 .Fa idx
 is \-1, one of these parameters if
 .Fa idx
