--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.626 2023/09/09 14:15:42 bentley Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.627 2023/09/12 08:54:04 jsg Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 9 2023 $
+.Dd $Mdocdate: September 12 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -101,7 +101,7 @@ The output is formatted as package specification pairs, in a form suitable
 for
 .Xr tsort 1 .
 .Pp
-Note that is is possible to obtain reverse dependency information by
+Note that it is possible to obtain reverse dependency information by
 using
 .Nm show-reverse-deps
 from the
